# ChangeLog for vmware overlay
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $ Id: $

  27 Sep 2006; Chris Gianelloni <wolf31o2@gentoo.org> ChangeLog:
  Updated vmware.eclass and vmware-mods.eclass from portage.

  22 Sep 2006; Chris Gianelloni <wolf31o2@gentoo.org> ChangeLog:
  We should be setting MY_P if we expect our tarball to be unpacked.  Ooops...

  22 Sep 2006; Chris Gianelloni <wolf31o2@gentoo.org> ChangeLog:
  Manifest/digest fix.

  21 Sep 2006; Chris Gianelloni <wolf31o2@gentoo.org> ChangeLog:
  Sync vmware.eclass with the in-tree version and fix the variables in
  vmware-workstation-tools.

  13 Sep 2006; Mike Auty <ikelos@gentoo.org> ChangeLog:
  Since I think the patch is probably only relevant to gcc-4.1, I've moved it
  out of the patch directory and applied it directly if the gcc version matches.
  I'm going to leave the eclass changes in place (but only in the overlay),
  since they'll probably be handy in the future...

  03 Sep 2006; Mike Auty <ikelos@gentoo.org> ChangeLog:
  Added an experimental patch vmware-modules-1.0.0.15 in an attempt to fix bug
  146004.

  17 Aug 2006; Mike Auty <ikelos@gentoo.org> ChangeLog:
  Version bump vmware-server-1.0.1.29996.
  Version bump vmware.eclass to use vmware-any-any104.

  11 Aug 2006; Chris Gianelloni <wolf31o2@gentoo.org> ChangeLog:
  Sync eclass with portage tree.  See bug #137423 for more information.

  09 Aug 2006; Chris Gianelloni <wolf31o2@gentoo.org> ChangeLog:
  Removed vmware-player, since it has been moved to the tree.

  08 Aug 2006; Mike Auty <ikelos@gentoo.org> ChangeLog:
  Try to keep the main tree and overlay synched, by copying over the minor
  edits in vmware.eclass

  05 Aug 2006; Mike Auty <ikelos@gentoo.org> ChangeLog:
  Added a fix from bug 142855 for issues arising if KBUILD_OUTPUT is set.
  
  04 Aug 2006; Chris Gianelloni <wolf31o2@gentoo.org> ChangeLog:
  Added a new revision of vmware-player and vmware-workstation-tools (5.5) for